versioned_docs/version-22.2/reference/rpk/rpk-acl/rpk-acl-create.mdx
---
title: rpk acl create
---

<head>
  <meta name="title" content="rpk acl create | Redpanda Docs" />
  <meta name="description" content="rpk acl create" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-acl/rpk-acl-create/" />
</head>

Create ACLs.

Following the multiplying effect of combining flags, the create command works on a
straightforward basis: every ACL combination is a created ACL.

As mentioned in the `rpk acl` help text, if no host is specified, an allowed
principal is allowed access from all hosts. The wildcard principal `*` allows
all principals. At least one principal, one host, one resource, and one
operation is required to create a single ACL.

Allow all permissions to user bar on topic `foo` and group `g`:

`rpk acl create --allow-principal bar --operation all --topic foo --group g`

Allow read permissions to all users on topics biz and baz:

`rpk acl create --allow-principal * --operation read --topic biz,baz`

Allow write permissions to user buzz to transactional id `txn`:

`rpk acl create --allow-principal User:buzz --operation write --transactional-id txn`

### Usage

```
rpk acl create [flags]
```

### Flags

<table>
  <tbody>
    <tr>
      <td>
        <strong> Value</strong>
      </td>
      <td>
        <strong> Type</strong>
      </td>
      <td>
        <strong> Description</strong>
      </td>
    </tr>
    <tr>
      <td>--allow-host</td>
      <td>strings</td>
      <td> Hosts from which access will be granted (repeatable).</td>
    </tr>
    <tr>
      <td>--allow-principal</td>
      <td>strings</td>
      <td>
        Principals for which these permissions will be granted (repeatable).
      </td>
    </tr>
    <tr>
      <td>--cluster</td>
      <td>-</td>
      <td> Whether to grant ACLs to the cluster.</td>
    </tr>
    <tr>
      <td>--deny-host</td>
      <td>strings</td>
      <td> Hosts from from access will be denied (repeatable).</td>
    </tr>
    <tr>
      <td>--deny-principal</td>
      <td>strings</td>
      <td>
        Principal for which these permissions will be denied (repeatable).
      </td>
    </tr>
    <tr>
      <td>--group</td>
      <td>strings</td>
      <td> Group to grant ACLs for (repeatable).</td>
    </tr>
    <tr>
      <td>-h, --help</td>
      <td>-</td>
      <td> Help for create.</td>
    </tr>
    <tr>
      <td>--operation</td>
      <td>strings</td>
      <td> Operation to grant (repeatable).</td>
    </tr>
    <tr>
      <td>--topic</td>
      <td>strings</td>
      <td> Topic to grant ACLs for (repeatable).</td>
    </tr>
    <tr>
      <td>--transactional-id</td>
      <td>strings</td>
      <td> Transactional IDs to grant ACLs for (repeatable).</td>
    </tr>
  </tbody>
</table>
